--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "parse-duration": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sanitize-html": "^2.5.3",
     "source-map-loader": "^1.1.2",
     "spinkit": "^2.0.1",
     "splitargs": "github:deviantony/splitargs#semver:~0.2.0",
@@ -129,9 +130,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/angular": "^1.8.3",
+    "@types/bootbox": "^5.2.2",
     "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/sanitize-html": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "auto-ngtemplate-loader": "^2.0.1",
